[package]
authors = ["OpenMLS Authors"]
description = "Traits used by OpenMLS"
documentation = "https://docs.rs/openmls_traits"
edition = "2018"
license = "MIT"
name = "openmls_traits"
readme = "README.md"
repository = "https://github.com/openmls/openmls/tree/main/traits"
version = "0.1.0"

[lib]
path = "src/traits.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
tls_codec = {version = "0.2.0", features = ["derive", "serde_serialize", "mls"]}

# Patching unreleased crates
[patch.crates-io]
tls_codec = {git = "https://github.com/RustCrypto/formats.git", features = ["derive", "serde_serialize", "mls"]}
